# hello-rust

./: .gitignore  Cargo.toml  READMD.md  README.md  data_converted.yaml
10_generic/src/: main.rs
3_basic/: README.md
4_ownership/src/: main.rs
5_struct_module/src/: main.rs  methods.rs  structs.rs
6_enums_and_matching/src/: impls.rs  main.rs  structs.rs
9_panic_error/src/: main.rs
a_10_1_generic/src/: main.rs
a_10_2_traits/: Cargo.toml  README.md
a_10_2_traits/src/: libs.rs  main.rs  traits.rs
a_10_3_lifetime/: Cargo.toml  README.md
a_10_3_lifetime/src/: main.rs
a_13_1_closures/: Cargo.toml  README.md
a_13_1_closures/src/: main.rs
a_15_smart_pointer/: Cargo.toml  README.md
a_15_smart_pointer/src/: main.rs
a_16_1_thread/: Cargo.toml
a_16_1_thread/src/: main.rs
a_16_2_channel/: Cargo.toml
a_16_2_channel/src/: main.rs
a_19_1_unsafe/: Cargo.toml
a_19_1_unsafe/src/: main.rs
a_3_basic/src/: main.rs
a_4_ownership/: README.md
a_5_struct_module/src/: structs.rs
a_6_enums_and_matching/src/: enums.rs  main.rs
a_7_module_system/src/: lib.rs  main.rs
a_8_collections/src/: main.rs
a_9_panic_error/src/: main.rs
b_async/: Cargo.toml  README.md
b_yaml_to_json/: Cargo.toml
basic/: README.md
basic/src/: main.rs  (+1 more)
enums/: Cargo.toml  README.md
module_system/: README.md
ownership/: README.md
panic_error/: Cargo.toml  README.md
s_api_web_server/: Cargo.toml
s_compression/: Cargo.toml
s_crypto/: Cargo.toml
s_diff/: Cargo.toml
s_json_parser/: Cargo.toml
s_regex/: Cargo.toml
src/: main.rs
struct_module/: Cargo.toml
(+36 files in other folders)
