workspace = { members = ["basic", "collections", "enums_and_matching", "libs", "module_system", "ownership", "struct_module"] }
[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
